Event Icons EC EEE

--- a/events.html
+++ b/events.html
@@ -61,12 +61,14 @@
 				<div class="news-agileinfo">
 					<div class="col-md-3 gallery-grid ews-w3lgrids">
 						<div class="grid">
-							<div class="news-w3img">
-								<a href="#" data-toggle="modal" data-target="#eeemyModal1"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
-							</div>
+						<!-- Patti Kuttets -->
 							<div class="news-w3imgtext">
-								<h4><a href="#" data-toggle="modal" data-target="#eeemyModal1">Mokshayathi</a></h4>
+								<div class="news-w3img">
+									<a href="#" data-toggle="modal" data-target="#eeemyModal1"><img src="images/EC/circuit.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+								</div><br>
+								<h4><a href="#eeemyModal1" data-toggle="modal" data-target="#eeemyModal1">Mokshayathi</a></h4>
 							</div>
+						<!-- end of PK -->
 						</div>
 					</div>
 				</div>
@@ -104,10 +106,10 @@
 				<div class="news-agileinfo">
 					<div class="col-md-3 gallery-grid ews-w3lgrids">
 						<div class="grid">
-							<div class="news-w3img">
-								<a href="#" data-toggle="modal" data-target="#eeemyModal2"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
-							</div>
 							<div class="news-w3imgtext">
+								<div class="news-w3img">
+									<a href="#" data-toggle="modal" data-target="#eeemyModal2"><img src="images/EC/presentation.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+								</div><br>
 								<h4><a href="#" data-toggle="modal" data-target="#eeemyModal2">Shastrapatra</a></h4>
 							</div>
 						</div>
@@ -149,10 +151,10 @@
 				<div class="news-agileinfo">
 					<div class="col-md-3 gallery-grid ews-w3lgrids">
 						<div class="grid">
-							<div class="news-w3img">
-								<a href="#" data-toggle="modal" data-target="#eeemyModal5"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
-							</div>
 							<div class="news-w3imgtext">
+								<div class="news-w3img">
+									<a href="#" data-toggle="modal" data-target="#eeemyModal5"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+								</div>
 								<h4><a href="#" data-toggle="modal" data-target="#eeemyModal5">MOSFEST</a></h4>
 							</div>
 						</div>
@@ -194,10 +196,10 @@
 				<div class="news-agileinfo">
 					<div class="col-md-3 gallery-grid ews-w3lgrids">
 						<div class="grid">
-							<div class="news-w3img">
-								<a href="#" data-toggle="modal" data-target="#eeemyModal3"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
-							</div>
 							<div class="news-w3imgtext">
+								<div class="news-w3img">
+									<a href="#" data-toggle="modal" data-target="#eeemyModal3"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+								</div>
 								<h4><a href="#" data-toggle="modal" data-target="#eeemyModal3">KALASHASTRA</a></h4>
 							</div>
 						</div>
@@ -239,10 +241,10 @@
 				<div class="news-agileinfo">
 					<div class="col-md-3 gallery-grid ews-w3lgrids">
 						<div class="grid">
-							<div class="news-w3img">
-								<a href="#" data-toggle="modal" data-target="#eeemyModal4"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
-							</div>
 							<div class="news-w3imgtext">
+								<div class="news-w3img">
+									<a href="#" data-toggle="modal" data-target="#eeemyModal4"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+								</div>
 								<h4><a href="#" data-toggle="modal" data-target="#eeemyModal4">OSCILLO ART</a></h4>
 							</div>
 						</div>
@@ -281,10 +283,10 @@
 				<div class="news-agileinfo">
 					<div class="col-md-3 gallery-grid ews-w3lgrids">
 						<div class="grid">
-							<div class="news-w3img">
-								<a href="#" data-toggle="modal" data-target="#eeemyModal6"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
-							</div>
 							<div class="news-w3imgtext">
+								<div class="news-w3img">
+									<a href="#" data-toggle="modal" data-target="#eeemyModal6"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+								</div>
 								<h4><a href="#" data-toggle="modal" data-target="#eeemyModal6">PRASHNOTHARA</a></h4>
 							</div>
 						</div>
@@ -319,10 +321,10 @@
 				<div class="news-agileinfo">
 					<div class="col-md-3 gallery-grid ews-w3lgrids">
 						<div class="grid">
-							<div class="news-w3img">
-								<a href="#" data-toggle="modal" data-target="#eeemyModal7"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
-							</div>
 							<div class="news-w3imgtext">
+								<div class="news-w3img">
+									<a href="#" data-toggle="modal" data-target="#eeemyModal7"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+								</div>
 								<h4><a href="#" data-toggle="modal" data-target="#eeemyModal7">PRAKALPA</a></h4>
 							</div>
 						</div>
@@ -373,11 +375,11 @@
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
-								<div class="news-w3img">
-									<a href="#" data-toggle="modal" data-target="#ecmyModal1"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
-								</div>
 								<div class="news-w3imgtext">
-									<h4><a href="#" data-toggle="modal" data-target="#ecmyModal1">AEROTRAC</a></h4>
+									<div class="news-w3img">
+										<a href="#" data-toggle="modal" data-target="#eeemyModal7"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+									</div>
+			.						<h4><a href="#" data-toggle="modal" data-target="#ecmyModal1">AEROTRAC</a></h4>
 								</div>
 							</div>
 						</div>
@@ -422,10 +424,10 @@
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
-								<div class="news-w3img">
-									<a href="#" data-toggle="modal" data-target="#ecmyModal2"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
-								</div>
 								<div class="news-w3imgtext">
+									<div class="news-w3img">
+										<a href="#" data-toggle="modal" data-target="#eeemyModal7"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#ecmyModal2">Pele on Wheels</a></h4>
 								</div>
 							</div>
@@ -498,10 +500,10 @@
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
-								<div class="news-w3img">
-									<a href="#" data-toggle="modal" data-target="#ecmyModal3"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
-								</div>
 								<div class="news-w3imgtext">
+									<div class="news-w3img">
+										<a href="#" data-toggle="modal" data-target="#eeemyModal7"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#ecmyModal3">COLLOQUIUM</a></h4>
 								</div>
 							</div>
@@ -535,10 +537,10 @@
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
-								<div class="news-w3img">
-									<a href="#" data-toggle="modal" data-target="#ecmyModal4"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
-								</div>
 								<div class="news-w3imgtext">
+									<div class="news-w3img">
+										<a href="#" data-toggle="modal" data-target="#eeemyModal7"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#ecmyModal4">INVESTITURE</a></h4>
 								</div>
 							</div>
@@ -571,10 +573,10 @@
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
-								<div class="news-w3img">
-									<a href="#" data-toggle="modal" data-target="#ecmyModal5"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
-								</div>
 								<div class="news-w3imgtext">
+									<div class="news-w3img">
+										<a href="#" data-toggle="modal" data-target="#eeemyModal7"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#ecmyModal5">E- TRON</a></h4>
 								</div>
 							</div>
@@ -608,10 +610,10 @@
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
-								<div class="news-w3img">
-									<a href="#" data-toggle="modal" data-target="#ecmyModal6"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
-								</div>
 								<div class="news-w3imgtext">
+									<div class="news-w3img">
+										<a href="#" data-toggle="modal" data-target="#eeemyModal7"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#ecmyModal6">KURUSHETRA</a></h4>
 								</div>
 							</div>
