Event Icons all dept

--- a/index.html
+++ b/index.html
@@ -111,10 +111,7 @@
 <div class="w3-about text-center">
 	<div class="container">
 		<h2 class="w3ls_head">The Clock is Ticking</h2>
-		<p class="para"><span style="color: white;">Lorem Ipsum is simply dummy text type setting industry esse cillum dolore eu 
-			fugiat nulla pariatur. Excepteur sint occaecat.</span></p>
-		<p class="para"><span style="color: white;">Lorem Ipsum is simply dummy text type setting industry esse cillum dolore eu 
-			fugiat nulla pariatur. Excepteur sint occaecat.</span></p>
+		<p class="para"><span style="color: white;"><br><br><br><br></span></p>
 		<div class="w3-ab-top">
 			<div class="col-md-4 "></div>
 			<div class="col-md-4 ">
@@ -123,14 +120,7 @@
 			<div class="col-md-4 "></div>
 			<div class="clearfix"></div>
 		</div>
-		<p class="para"><span style="color: white;">Lorem Ipsum is simply dummy text type setting industry esse cillum dolore eu 
-			fugiat nulla pariatur. Excepteur sint occaecat.</span></p>
-
-		<p class="para"><span style="color: white;">Lorem Ipsum is simply dummy text type setting industry esse cillum dolore eu 
-			fugiat nulla pariatur. Excepteur sint occaecat.</span></p>
-
-		<p class="para"><span style="color: white;">Lorem Ipsum is simply dummy text type setting industry esse cillum dolore eu 
-			fugiat nulla pariatur. Excepteur sint occaecat.</span></p>
+		<p class="para"><span style="color: white;"><br><br><br><br></span></p>
 	</div>
 </div>
 	<div class="services news">
@@ -234,7 +224,7 @@
 							</div>
 							<section>
 								<div class="modal-body">
-									<img src="images/smule.png" alt=" " class="img-responsive" />
+									<!-- <img src="images/smule.png" alt=" " class="img-responsive" /> -->
 									<p><ul>
 										<li>Entry till August 5pm.</li>
 										<li>Judgement will be based on the maximum number of likes and shares along with the quality of the song.</li>
@@ -258,7 +248,7 @@
 							</div>
 							<section>
 								<div class="modal-body">
-									<img src="images/boomerang.png" alt=" " class="img-responsive" />
+									<!-- <img src="images/boomerang.png" alt=" " class="img-responsive" /> -->
 									<p><ul>
 										<li>Entry till August 5pm.</li>
 										<li>Judgement will be based on the maximum number of likes and shares.</li>
