Added oscilloscope, kalashastra

--- a/events.html
+++ b/events.html
@@ -198,7 +198,7 @@
 						<div class="grid">
 							<div class="news-w3imgtext">
 								<div class="news-w3img">
-									<a href="#" data-toggle="modal" data-target="#eeemyModal3"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+									<a href="#" data-toggle="modal" data-target="#eeemyModal3"><img src="images/EC/exhibition.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
 								</div>
 								<h4><a href="#" data-toggle="modal" data-target="#eeemyModal3">KALASHASTRA</a></h4>
 							</div>
@@ -243,7 +243,7 @@
 						<div class="grid">
 							<div class="news-w3imgtext">
 								<div class="news-w3img">
-									<a href="#" data-toggle="modal" data-target="#eeemyModal4"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+									<a href="#" data-toggle="modal" data-target="#eeemyModal4"><img src="images/EC/art.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
 								</div>
 								<h4><a href="#" data-toggle="modal" data-target="#eeemyModal4">OSCILLO ART</a></h4>
 							</div>
@@ -285,7 +285,7 @@
 						<div class="grid">
 							<div class="news-w3imgtext">
 								<div class="news-w3img">
-									<a href="#" data-toggle="modal" data-target="#eeemyModal6"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+									<a href="#" data-toggle="modal" data-target="#eeemyModal6"><img src="images/EC/art.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
 								</div>
 								<h4><a href="#" data-toggle="modal" data-target="#eeemyModal6">PRASHNOTHARA</a></h4>
 							</div>
