--- a/events.html
+++ b/events.html
@@ -285,7 +285,7 @@
 						<div class="grid">
 							<div class="news-w3imgtext">
 								<div class="news-w3img">
-									<a href="#" data-toggle="modal" data-target="#eeemyModal6"><img src="images/EC/art.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+									<a href="#" data-toggle="modal" data-target="#eeemyModal6"><img src="images/EC/question.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
 								</div>
 								<h4><a href="#" data-toggle="modal" data-target="#eeemyModal6">PRASHNOTHARA</a></h4>
 							</div>
@@ -323,7 +323,7 @@
 						<div class="grid">
 							<div class="news-w3imgtext">
 								<div class="news-w3img">
-									<a href="#" data-toggle="modal" data-target="#eeemyModal7"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+									<a href="#" data-toggle="modal" data-target="#eeemyModal7"><img src="images/EC/cpu.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
 								</div>
 								<h4><a href="#" data-toggle="modal" data-target="#eeemyModal7">PRAKALPA</a></h4>
 							</div>
