Completed EEE Images

--- a/events.html
+++ b/events.html
@@ -377,7 +377,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#ecmyModal1"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#ecmyModal1"><img src="images/EEE/drone.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 			.						<h4><a href="#" data-toggle="modal" data-target="#ecmyModal1">AEROTRAC</a></h4>
 								</div>
@@ -426,7 +426,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#ecmyModal2"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+										<a href="#" data-toggle="modal" data-target="#ecmyModal2"><img src="images/EEE/robot.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#ecmyModal2">Pele on Wheels</a></h4>
 								</div>
@@ -502,7 +502,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#ecmyModal3"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+										<a href="#" data-toggle="modal" data-target="#ecmyModal3"><img src="images/EEE/presentation.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#ecmyModal3">COLLOQUIUM</a></h4>
 								</div>
@@ -539,7 +539,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#ecmyModal4"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+										<a href="#" data-toggle="modal" data-target="#ecmyModal4"><img src="images/EEE/exhibition.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#ecmyModal4">INVESTITURE</a></h4>
 								</div>
@@ -575,7 +575,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#ecmyModal5"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+										<a href="#" data-toggle="modal" data-target="#ecmyModal5"><img src="images/EEE/atomic.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#ecmyModal5">E- TRON</a></h4>
 								</div>
@@ -612,7 +612,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#ecmyModal6"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
+										<a href="#" data-toggle="modal" data-target="#ecmyModal6"><img src="images/EEE/electrical.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a><br> 
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#ecmyModal6">KURUSHETRA</a></h4>
 								</div>
