--- a/events.html
+++ b/events.html
@@ -649,7 +649,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#csmyModal1"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#csmyModal1"><img src="images/CS/racing.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#csmyModal1">CODE PURSUIT</a></h4>
 								</div>
@@ -690,7 +690,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#csmyModal2"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#csmyModal2"><img src="images/CS/notch.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#csmyModal2">Dossier Notch</a></h4>
 								</div>
@@ -718,7 +718,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#csmyModal3"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#csmyModal3"><img src="images/CS/presentation.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#csmyModal3">Traditio</a></h4>
 								</div>
@@ -763,7 +763,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#csmyModal4"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#csmyModal4"><img src="images/CS/sort.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#csmyModal4">C- Swap</a></h4>
 								</div>
@@ -809,7 +809,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#csmyModal5"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#csmyModal5"><img src="images/CS/game.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#csmyModal5">Nemesis</a></h4>
 								</div>
@@ -837,7 +837,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#csmyModal6"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#csmyModal6"><img src="images/CS/conference.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#csmyModal6">Technical Talk</a></h4>
 								</div>
