--- a/events.html
+++ b/events.html
@@ -1100,7 +1100,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#cemyModal1"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#cemyModal1"><img src="images/CE/mind.jpg" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#cemyModal1">Mind Spark</a></h4>
 								</div>
@@ -1165,7 +1165,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#cemyModal2"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#cemyModal2"><img src="images/CE/excaver.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#cemyModal2">Excaver</a></h4>
 								</div>
@@ -1193,7 +1193,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#cemyModal3"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#cemyModal3"><img src="images/CE/creativita.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#cemyModal3">Creativita</a></h4>
 								</div>
@@ -1235,7 +1235,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#cemyModal4"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#cemyModal4"><img src="images/CE/innovance.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#cemyModal4">Innovace</a></h4>
 								</div>
@@ -1277,7 +1277,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#cemyModal5"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#cemyModal5"><img src="images/CE/expendables.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#cemyModal5">Expendables</a></h4>
 								</div>
@@ -1319,7 +1319,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#cemyModal6"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#cemyModal6"><img src="images/CE/tut.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#cemyModal6">Tutankhamun</a></h4>
 								</div>
@@ -1347,7 +1347,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#cemyModal7"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#cemyModal7"><img src="images/CE/gallery.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#cemyModal7">Galleria</a></h4>
 								</div>
@@ -1411,7 +1411,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#memyModal1"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#memyModal1"><img src="images/ME/roadies.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#memyModal1">ROADIES</a></h4>
 								</div>
@@ -1439,7 +1439,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#memyModal2"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#memyModal2"><img src="images/ME/robot.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#memyModal2">ROBO RACE</a></h4>
 								</div>
@@ -1495,7 +1495,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#memyModal4"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#memyModal4"><img src="images/ME/talk.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#memyModal4">TECHNICAL TALK</a></h4>
 								</div>
@@ -1551,7 +1551,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#memyModal6"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#memyModal6"><img src="images/ME/expo.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#memyModal6">PROJECT EXPO</a></h4>
 								</div>
@@ -1579,7 +1579,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#memyModal7"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#memyModal7"><img src="images/ME/zone.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#memyModal7">MECH ZONE</a></h4>
 								</div>
@@ -1616,7 +1616,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#mbamyModal1"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#mbamyModal1"><img src="images/MBA/question.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#mbamyModal1">Business Quiz</a></h4>
 								</div>
@@ -1672,7 +1672,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#mbamyModal3"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#mbamyModal3"><img src="images/MBA/boss.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#mbamyModal3">Best Manager</a></h4>
 								</div>
@@ -1700,7 +1700,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#mbamyModal4"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#mbamyModal4"><img src="images/MBA/network.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#mbamyModal4">Best Management Team</a></h4>
 								</div>
