Completed IT images

--- a/events.html
+++ b/events.html
@@ -874,7 +874,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#itmyModal1"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#itmyModal1"><img src="images/IT/motherboard.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#itmyModal1">System Assembly</a></h4>
 								</div>
@@ -911,7 +911,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#itmyModal2"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#itmyModal2"><img src="images/IT/computer.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#itmyModal2">Blind Coding</a></h4>
 								</div>
@@ -948,7 +948,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#itmyModal3"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#itmyModal3"><img src="images/IT/maze.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#itmyModal3">Maze Run 2.0</a></h4>
 								</div>
@@ -985,7 +985,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#itmyModal4"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#itmyModal4"><img src="images/IT/map.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#itmyModal4">Treasure Hunt</a></h4>
 								</div>
@@ -1023,7 +1023,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#itmyModal5"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#itmyModal5"><img src="images/IT/exhibition.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#itmyModal5">Project Exhibition</a></h4>
 								</div>
@@ -1062,7 +1062,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#itmyModal6"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#itmyModal6"><img src="images/IT/presentation.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#itmyModal6">Technical Talk &amp; Paper Presentation</a></h4>
 								</div>
