Updated Oscillo Art

--- a/events.html
+++ b/events.html
@@ -61,14 +61,12 @@
 				<div class="news-agileinfo">
 					<div class="col-md-3 gallery-grid ews-w3lgrids">
 						<div class="grid">
-						<!-- Patti Kuttets -->
 							<div class="news-w3imgtext">
 								<div class="news-w3img">
 									<a href="#" data-toggle="modal" data-target="#eeemyModal1"><img src="images/EC/circuit.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 								</div><br>
 								<h4><a href="#eeemyModal1" data-toggle="modal" data-target="#eeemyModal1">Mokshayathi</a></h4>
 							</div>
-						<!-- end of PK -->
 						</div>
 					</div>
 				</div>
@@ -264,6 +262,7 @@
 									<ul>
 										<li>A team of maximum 2 members can participate in the contest.</li>
 										<li>Original contents are encouraged.</li>
+										<li>Analog and micro controller circuits are only allowed.</li>
 										<li>Oscilloscope will be provided at the event.</li>
 										<li>All participants are requested to bring laptops and necessary equipment’s</li>
 										<li>Judging criteria will be based on self-made art and aesthetics.</li>
@@ -273,7 +272,7 @@
 										<li>Any of the rules stated above can be changed or updated by the event coordinators and will do their best to inform all the participants about the same in a timely manner. However, it is ultimately the responsibility of the participants to stay updated with the rules and regulations of the event.</li>
 										<li>All participants of this event will be awarded a participation certificate.</li>
 										<li>Registration fee: Rs.100 per team.</li>
-									<br>STAFF CO-ORDINATOR: MRS.PRIYA G L (9496803291)<br>STUDENT CO-ORDINATORS: GLEN P YELDHO (9747071989)<br>CHINCHU ELDHOS (7034355297)<br>TOTAL PRIZE MONEY: Rs.6000<br>PRELIMS: 10 AM TO 11 AM<br>FINALS: 11:30 AM TO 1:30 PM<br>VENUE: CIRCUITS 1 &amp; 2 LAB<br>For more queries, please feel free to contact us through phone and email to <b>ossiloartbodhi10.0@gmail.com</b></p>
+									<br>STAFF CO-ORDINATOR: MRS.PRIYA G L (9496803291)<br>STUDENT CO-ORDINATORS: GLEN P YELDHO (9747071989)<br>CHINCHU ELDHOS (7034355297)<br>TOTAL PRIZE MONEY: Rs.6000<br>TIME: 10:00 AM TO 1:30 PM<br>VENUE: CIRCUITS 1 &amp; 2 LAB<br>For more queries, please feel free to contact us through phone and email to <b>ossiloartbodhi10.0@gmail.com</b></p>
 								</div>
 							</section>
 						</div>
