--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
 							</div>
 							<div class="news-w3imgtext">
 								<h5 class="w3-agilep">Register Now</h5>
-								<h4><a href="#" data-toggle="modal" data-target="#myModal3">SPOT PHOTOGRAPHY</a></h4> 
-								<p></p> 
+								<h4><a href="#" data-toggle="modal" data-target="#myModal3">SHUTTER UP</a></h4> 
+								<p>Do you have a skill in capturing photos? Then here's an opportunity for it... </p> 
 							</div>
 						</div>
 					</div>
@@ -273,7 +273,7 @@
 							</div>
 							<section>
 								<div class="modal-body">
-									<img src="images/general/football.jpg" alt=" " class="img-responsive" />
+									<!-- <img src="images/general/football.jpg" alt=" " class="img-responsive" /> -->
 									<p><ul>
 										<li>VENUE: OLD BASKETBALL COURT</li>
 										<li>REGISTRATION: Rs. 50 PER HEAD</li>
@@ -298,16 +298,16 @@
 							</div>
 							<section>
 								<div class="modal-body">
-									<img src="images/drone.jpg" alt=" " class="img-responsive" />
+									<!-- <img src="images/drone.jpg" alt=" " class="img-responsive" /> -->
 									<p><ul>
-										<li>VENUE: B- Block Ground Floor (Class Room)</li>
+										<li>VENUE: B102</li>
 										<li>REGISTRATION: Rs. 50 PER HEAD</li>
 										<li>NO. OF PARTICIPANTS: 1</li>
 										<li>PRIZES WORTH 4K</li>
 										<li>DATE: 26th August</li>
-										<li>TIME: 10 am TO 4 pm </li>
+										<li>TIME: 10 am TO 3 pm </li>
 										<li>Staff Coordinator: Eldhose Paul</li>
-										<li>Student Coordinator: GITTO SUNNY (9495715188)</li>
+										<li>Student Coordinator: Mathew George (9400533211)</li>
 									</ul></p>
 								</div>
 							</section>
