--- a/gallery.html
+++ b/gallery.html
@@ -49,7 +49,7 @@
 		<div class="container">
 			<div class="w3l-heading">
 				<h2 class="w3ls_head">Gallery</h2>
-			</div>
+				<p class="para"><span style="font-size: 20px">Glimpses of Bodhi-2k17</span></p>
 			<div class="w3-agileits-gallery-grids">
 				<div class="col-md-3 gallery-grid">
 					<div class="grid">
