--- a/index.html
+++ b/index.html
@@ -101,13 +101,10 @@
 						});
 					});
 				</script>
-				<!-- //flexSlider -->
 			</div>
 		</div>
 	</div>
 </div>
-<!-- //banner -->
-<!-- Specialize-section -->
 <div class="w3-about text-center">
 	<div class="container">
 		<h2 class="w3ls_head">The Clock is Ticking</h2>
@@ -136,9 +133,9 @@
 								<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/smule.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 							</div>
 							<div class="news-w3imgtext">
-								<h5 class="w3-agilep">Register Now</h5>
+								<h5 class="w3-agilep">&nbsp;&nbsp;Register Now&nbsp;&nbsp;</h5>
 								<h4><a href="#" data-toggle="modal" data-target="#myModal">Last Date: 20th August 2017</a></h4> 
-								<p>Music is the art of thinking with sounds. Explore your skill in music and send them to us to win.</p>
+								<p>Explore your skill in music and send them to us to win.</p>
 							</div>
 						</div>
 					</div>
@@ -148,9 +145,9 @@
 								<a href="#" data-toggle="modal" data-target="#myModal1"><img src="images/boomerang.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 							</div>
 							<div class="news-w3imgtext">
-								<h5 class="w3-agilep">Register Now</h5>
+								<h5 class="w3-agilep">&nbsp;&nbsp;Register Now&nbsp;&nbsp;</h5>
 								<h4><a href="#" data-toggle="modal" data-target="#myModal1">Last Date: 20th August 2017</a></h4> 
-								<p>Boomerang makes everyday moments fun and unexpected. Create mini-videos that loop back and forth to grab exciting prizes.</p>
+								<p>Create mini-videos that loop back and forth to win</p>
 							</div>
 						</div>
 					</div>
@@ -160,7 +157,7 @@
 								<a href="#" data-toggle="modal" data-target="#myModal2"><img src="images/general/football.png" class="img-responsive zoom-img" alt=""/></a>
 							</div>
 							<div class="news-w3imgtext">
-								<h5 class="w3-agilep">Register Now</h5>
+								<h5 class="w3-agilep">&nbsp;&nbsp;Register Now&nbsp;&nbsp;</h5>
 								<h4><a href="#" data-toggle="modal" data-target="#myModal2">4'S FOOTBALL</a></h4> 
 								<p></p> 
 							</div>
@@ -172,7 +169,7 @@
 								<a href="#" data-toggle="modal" data-target="#myModal3"><img src="images/general/landscape.png" class="img-responsive zoom-img" alt=""/></a>
 							</div>
 							<div class="news-w3imgtext">
-								<h5 class="w3-agilep">Register Now</h5>
+								<h5 class="w3-agilep">Spot Registration</h5>
 								<h4><a href="#" data-toggle="modal" data-target="#myModal3">SHUTTER UP</a></h4> 
 								<p>Do you have a skill in capturing photos? Then here's an opportunity for it... </p> 
 							</div>
@@ -182,8 +179,6 @@
 				</div>
 			</div>
 		</div>
-		<!-- //news --> 
-		<!-- testimonials -->
 		<div class="testimonials">
 			<div class="container"> 
 				<h3 class="w3ls_head">Guests</h3>
@@ -299,16 +294,29 @@
 							<section>
 								<div class="modal-body">
 									<!-- <img src="images/drone.jpg" alt=" " class="img-responsive" /> -->
-									<p><ul>
-										<li>VENUE: B102</li>
-										<li>REGISTRATION: Rs. 50 PER HEAD</li>
-										<li>NO. OF PARTICIPANTS: 1</li>
-										<li>PRIZES WORTH 4K</li>
-										<li>DATE: 26th August</li>
-										<li>TIME: 10 am TO 3 pm </li>
-										<li>Staff Coordinator: Eldhose Paul</li>
-										<li>Student Coordinator: Mathew George (9400533211)</li>
-									</ul></p>
+									<p>Rules
+										<ol>
+											<li>It is an individual competition and is open to all.</li>
+											<li>Participants can enroll their name on the spot with a fee of 50₹.</li>
+											<li>Theme will be announced at 9 am.</li>
+											<li>Only Digital Cameras can be used.</li>
+											<li>The photos must be taken inside the college campus.</li>
+											<li>Each image submitted must be the original and unpublished work of the participant who must also be its copyright owner.</li>
+											<li>No editing work should be done.</li>
+											<li>The participant only have to submit his/her best pictures of the fest before 3 pm on the registration desk.</li>
+											<li>Decision of the judges will  be final and binding.</li>
+										</ol>
+										<ul>
+											<li>VENUE: B102</li>
+											<li>REGISTRATION: Rs. 50 PER HEAD</li>
+											<li>NO. OF PARTICIPANTS: 1</li>
+											<li>PRIZES WORTH 4K. FIRST: 2.5k SECOND: 1.5k</li>
+											<li>DATE: 26th August</li>
+											<li>TIME: 10 am to 3 pm </li>
+											<li>Staff Coordinator: Eldhose Paul ()9744167116)</li>
+											<li>Student Coordinator: Mathew George (9400533211)</li>
+										</ul>
+									</p>
 								</div>
 							</section>
 						</div>
