Updates General and Robo Race

--- a/events.html
+++ b/events.html
@@ -1454,7 +1454,32 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>ROBO RACE (DAY 2)<br>STAFF CO-ORDINATOR: Rakesh Jose<br>STUDENT CO-ORDINATORS: ALEN JAMES (9633828133)<br>PRIZE MONEY: FIRST-Rs.4000, SECOND Rs-2000<br>Rs. 50 PER HEAD (1- 4 MEMBERS)<br>VENUE: NEW PARKING GROUND (Near R&amp;D Block)</p>
+										<p>ROBO RACE (DAY 2)<br>CHALLENGE :-<br><q><b>More speed, more power with minimum time</b></q><br>Design a manually controlled ROBOT that has capacity to cover maximum distance in shortest possible time, challenging the hurdles and be one of the best opponents. Think your robot can overcome any bstacle-big or small in the least of time. If so get it on the track and let the game begin. And bear in mind that maximizing RPM does not make you winner but winners are those who have good presence of mind, sharpness and practice.<br>ROBOT SPECIFICATIONS:-<br>
+										<ul>
+											<li>The maximum dimension of the robot can be 30 x 30 cm (l x b).</li>
+											<li>The robot may be wired or wireless.</li>
+											<li>Max weight must not exceed 6 kg.</li>
+											<li>The power supply which can be used is maximum up to 12 Volt.</li>
+											<li>Only fabricated cars are allowed.</li>
+										</ul><br>RULES AND REGULATIONS:-<br>
+										<ul>
+											<li>The fastest robot which complete in least time will win.</li>
+											<li>Robot should be as per the given specifications.</li>
+											<li>Each team can have maximum two members. Students from different institutes can form a team.</li>
+											<li>Entry fee Rs. 50 per head.</li>
+											<li>Each member of the team must contain the identity card of his/her respected institute.</li>
+											<li>If any of the robots starts off before start up call, the counter would be restated and the machines will be given a maximum of three chances. If repeated again then team will be disqualified.</li>
+											<li>If any of the robot gets out of the track more than 3 times, then the robot will be insisted to start from the previous check point.</li>
+											<li>During the event do not step on the track.</li>
+											<li>Your robot must be ready when call is made for your team.</li>
+											<li>Faculty coordinates have the right to take final decision for any matter during the event.</li>
+											<li>Judge&#39;s decision will be considered final. Argument with judges in any form will lead to the disqualification of the team.</li>
+											<li>Certificates will be given to all the participants.</li>
+										</ul><br>ARENA:-<br>
+										<ul>
+											<li>There will be certain obstacles in the race track which will try to slow down the robot.</li>
+											<li>Arena will consist of slider, gate, rotating disc, roller ways etc..</li>
+										</ul><br>STAFF CO-ORDINATOR: Rakesh Jose<br>STUDENT CO-ORDINATORS: ALEN JAMES (9633828133)<br>ALPHONSE MATHEW (9605796965)<br>ALBIN SEBASTIAN (9496720073)<br>JOHNS THANKACHAN (7034806578)<br>PRIZE MONEY: FIRST-Rs.4000, SECOND Rs-2000<br>Rs. 50 PER HEAD (1- 4 MEMBERS)<br>VENUE: NEW PARKING GROUND (Near R&amp;D Block)</p>
 									</div>
 								</section>
 							</div>
