--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				<p class="para">Tighten up 'coz its your chance to win<span> amazing prizes</span> for the events below. Hurry Up and Register to win...!!!</p>			
 				</div>
 				<div class="news-agileinfo">
-					<div class="col-sm-3 news-w3lgrids">
+					<div class="col-md-4 news-w3lgrids">
 						<div class="news-gridtext">
 							<div class="news-w3img">
 								<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/smule.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
@@ -139,7 +139,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 news-w3lgrids">
+					<div class="col-md-4 news-w3lgrids">
 						<div class="news-gridtext">
 							<div class="news-w3img">
 								<a href="#" data-toggle="modal" data-target="#myModal1"><img src="images/boomerang.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
@@ -151,19 +151,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 news-w3lgrids">
-						<div class="news-gridtext">
-							<div class="news-w3img">
-								<a href="#" data-toggle="modal" data-target="#myModal2"><img src="images/general/football.png" class="img-responsive zoom-img" alt=""/></a>
-							</div>
-							<div class="news-w3imgtext">
-								<h5 class="w3-agilep">&nbsp;&nbsp;Register Now&nbsp;&nbsp;</h5>
-								<h4><a href="#" data-toggle="modal" data-target="#myModal2">4'S FOOTBALL</a></h4> 
-								<p></p> 
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 news-w3lgrids">
+					<div class="col-md-4 news-w3lgrids">
 						<div class="news-gridtext">
 							<div class="news-w3img">
 								<a href="#" data-toggle="modal" data-target="#myModal3"><img src="images/general/landscape.png" class="img-responsive zoom-img" alt=""/></a>
@@ -171,7 +159,31 @@
 							<div class="news-w3imgtext">
 								<h5 class="w3-agilep">Spot Registration</h5>
 								<h4><a href="#" data-toggle="modal" data-target="#myModal3">SHUTTER UP</a></h4> 
-								<p>Do you have a skill in capturing photos? Then here's an opportunity for it... </p> 
+								<p><br>Photography is the simultaneous recognition in a fraction of a second of the significance of an event. Do you have a skill in capturing photos? Then here's an opportunity for it...<br></p> 
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 news-w3lgrids">
+						<div class="news-gridtext">
+							<div class="news-w3img">
+								<a href="#" data-toggle="modal" data-target="#myModal2"><img src="images/general/football.png" class="img-responsive zoom-img" alt=""/></a>
+							</div>
+							<div class="news-w3imgtext">
+								<h5 class="w3-agilep">Spot Registration</h5>
+								<h4><a href="#" data-toggle="modal" data-target="#myModal2">4'S FOOTBALL</a></h4> 
+								<p>Have you played $'s Football? Why don't you just git it a try?</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 news-w3lgrids">
+						<div class="news-gridtext">
+							<div class="news-w3img">
+								<a href="#" data-toggle="modal" data-target="#myModal4"><img src="images/general/life.png" class="img-responsive zoom-img" alt=""/></a>
+							</div>
+							<div class="news-w3imgtext">
+								<h5 class="w3-agilep">&nbsp;&nbsp;Exhibition&nbsp;&nbsp;</h5>
+								<h4><a href="#" data-toggle="modal" data-target="#myModal3">AVENGERS</a></h4> 
+								<p>An exhibition of life rescue operation equipments</p> 
 							</div>
 						</div>
 					</div>
@@ -269,16 +281,36 @@
 							<section>
 								<div class="modal-body">
 									<!-- <img src="images/general/football.jpg" alt=" " class="img-responsive" /> -->
-									<p><ul>
-										<li>VENUE: OLD BASKETBALL COURT</li>
-										<li>REGISTRATION: Rs. 50 PER HEAD</li>
-										<li>NO. OF PARTICIPANTS: 4</li>
-										<li>PRIZES WORTH 5K</li>
-										<li>DATE: 25 &amp; 26th August</li>
-										<li>TIME: 11.30 am TO 4 pm </li>
-										<li>Staff Coordinator: Eldhose Kurian</li>
-										<li>Student Coordinator: TONEY DOMINIC (9495212216)</li>
-									</ul></p>
+									<p>FUN FOURS RULES
+										<ol>
+										LAW 1 THE NUMBER OF PLAYERS
+											<li>The maximum number of players in a team shall be 6, of whom 4 can be on the field of play at any given time. (4 outfield players and no goalkeeper)</li>
+											<li>Players can be substituted at any point in the game.</li>
+											<li>Players who have been substituted can be reintroduced to the game at a later stage (rolling substitutes)</li>
+										LAW 2 OFFSIDE
+											<li>There will be no offside in play.</li>
+										LAW 3 INFRINGEMENTS AND FOUL PLAY
+											<li>All free kicks awarded for infringements or foul play shall be direct.</li>
+										LAW 4 STARTING AND RESTARTING THE GAME
+											<li>The game shall be started with a centre ball.</li>
+											<li>The game shall be restarted with a centre ball after a goal is scored.</li>
+											<li>The game shall be restarted with a kick-in if the ball goes out of play.</li>
+											<li>If the goal difference in any game reaches NINE, the game should stop.</li>
+											<li>Each half will be of 7 minutes</li>
+										LAW 5 IF THE GOAL DIFFERENCE IS NIL
+											<li>A sudden death shoot-out from the centre.</li>
+										</ol>
+										<ul>
+											<li>VENUE: OLD BASKETBALL COURT</li>
+											<li>REGISTRATION: Rs. 50 PER HEAD</li>
+											<li>NO. OF PARTICIPANTS: 4</li>
+											<li>PRIZES WORTH 5K</li>
+											<li>DATE: 25 &amp; 26th August</li>
+											<li>TIME: 11.30 am TO 4 pm </li>
+											<li>Staff Coordinator: Eldhose Kurian</li>
+											<li>Student Coordinator: TONEY DOMINIC (9495212216)</li>
+										</ul>
+									</p>
 								</div>
 							</section>
 						</div>
@@ -297,13 +329,13 @@
 									<p>Rules
 										<ol>
 											<li>It is an individual competition and is open to all.</li>
-											<li>Participants can enroll their name on the spot with a fee of 50₹.</li>
+											<li>Participants can enroll their name on the spot with a fee of ₹50.</li>
 											<li>Theme will be announced at 9 am.</li>
 											<li>Only Digital Cameras can be used.</li>
 											<li>The photos must be taken inside the college campus.</li>
-											<li>Each image submitted must be the original and unpublished work of the participant who must also be its copyright owner.</li>
+											<li>EThe submitted images must be original and taken within the given time frame only</li>
 											<li>No editing work should be done.</li>
-											<li>The participant only have to submit his/her best pictures of the fest before 3 pm on the registration desk.</li>
+											<li>The participant only have to submit his/her best pictures of the fest before 2pm on the registration desk.</li>
 											<li>Decision of the judges will  be final and binding.</li>
 										</ol>
 										<ul>
@@ -317,6 +349,22 @@
 											<li>Student Coordinator: Mathew George (9400533211)</li>
 										</ul>
 									</p>
+								</div>
+							</section>
+						</div>
+					</div>
+				</div>
+				<div class="modal video-modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModal3">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								SAVENGERS
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
+							</div>
+							<section>
+								<div class="modal-body">
+									<!-- <img src="images/drone.jpg" alt=" " class="img-responsive" /> -->
+									<p>An Exhibition of life rescue operation equipments.<br>Venue: R &amp; D Block<br>Date: 25th and 26th August 2017</p>
 								</div>
 							</section>
 						</div>
