CSwap Registration Link

--- a/events.html
+++ b/events.html
@@ -782,6 +782,7 @@
 										<h2>Synchronized Coders</h2>
                                                 <br>Rules
                                                 <ol>
+                                                	<li>Register <a href="https://goo.gl/forms/BFGBHKD4Rr9lqSTY2">here</a></li>
                                                     <li>The programme consist of two sections.</li>
                                                     <li>The first section is the preliminary test and the second section is the coding section.</li>
                                                     <li>The team has to pass the preliminary test to qualify for the second section. </li>
