Fixing Jibin Jose Bug

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation" class="active">
 								<a href="#testi" aria-controls="testi" role="tab" data-toggle="tab">
-									<img src="images/jibinJose.png" alt="" style="border-radius: 15px 50px 30px" height="200" width="200" />
+									<img src="images/jibinJose.png" alt="" class="image-round-frame" />
 								</a>
 
 							</li>
