--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation" class="active">
 								<a href="#testi" aria-controls="testi" role="tab" data-toggle="tab">
-									<img src="images/jibinJose.png" alt="" class="image-round-frame" />
+									<img src="images/jibinJose.png" alt="" class="image-round-frame" style="border: 2px solid dark; border-radius: 100%; max-width: 250px;" />
 								</a>
 
 							</li>
